--- a/eq4m-armas.html
+++ b/eq4m-armas.html
@@ -220,7 +220,7 @@
         <div class="nav-container">
             <div class="logo">L4D2</div>
             <div class="nav-links">
-                <a href="eq4m-novo-motd.html" class="nav-link">Home</a>
+                <a href="index.html" class="nav-link">Home</a>
             </div>
         </div>
     </div>
@@ -481,7 +481,7 @@
                             <span class="stat-value">42</span>
                         </div>
                         <div class="stat-bar-container">
-                            <div class="stat-bar damage" style="width: 50%;"></div>
+                            <div class="stat-bar damage" style="width: 42%;"></div>
                         </div>
                     </div>
                     <div class="weapon-card-stat">
@@ -530,7 +530,7 @@
                             <span class="stat-value">45</span>
                         </div>
                         <div class="stat-bar-container">
-                            <div class="stat-bar damage" style="width: 57%;"></div>
+                            <div class="stat-bar damage" style="width: 45%;"></div>
                         </div>
                     </div>
                     <div class="weapon-card-stat">
@@ -579,7 +579,7 @@
                             <span class="stat-value">65</span>
                         </div>
                         <div class="stat-bar-container">
-                            <div class="stat-bar damage" style="width: 95%;"></div>
+                            <div class="stat-bar damage" style="width: 65%;"></div>
                         </div>
                     </div>
                     <div class="weapon-card-stat">
@@ -628,7 +628,7 @@
                             <span class="stat-value">49</span>
                         </div>
                         <div class="stat-bar-container">
-                            <div class="stat-bar damage" style="width: 65%;"></div>
+                            <div class="stat-bar damage" style="width: 49%;"></div>
                         </div>
                     </div>
                     <div class="weapon-card-stat">
@@ -677,7 +677,7 @@
                             <span class="stat-value">100</span>
                         </div>
                         <div class="stat-bar-container">
-                            <div class="stat-bar damage" style="width: 95%;"></div>
+                            <div class="stat-bar damage" style="width: 100%;"></div>
                         </div>
                     </div>
                     <div class="weapon-card-stat">
@@ -726,7 +726,7 @@
                             <span class="stat-value">80</span>
                         </div>
                         <div class="stat-bar-container">
-                            <div class="stat-bar damage" style="width: 85%;"></div>
+                            <div class="stat-bar damage" style="width: 80%;"></div>
                         </div>
                     </div>
                     <div class="weapon-card-stat">
