--- a/index.html
+++ b/index.html
@@ -592,11 +592,10 @@
         });
         
         // Add hover sound effects (if you add audio files)
-        /* Uncomment this if you add audio files
         const hoverSound = new Audio('hover.mp3');
         const clickSound = new Audio('click.mp3');
         
-        document.querySelectorAll('.nav-link, .command-item, .infected-item').forEach(element => {
+        document.querySelectorAll('.nav-link').forEach(element => {
             element.addEventListener('mouseenter', () => {
                 hoverSound.currentTime = 0;
                 hoverSound.play();
@@ -607,5 +606,4 @@
                 clickSound.play();
             });
         });
-        */
     </script>
