--- a/eq4m-armas.html
+++ b/eq4m-armas.html
@@ -220,7 +220,7 @@
         <div class="nav-container">
             <div class="logo">L4D2</div>
             <div class="nav-links">
-                <a href="index.html" class="nav-link">Home</a>
+                <a href="eq4m-novo-motd.html" class="nav-link">Home</a>
             </div>
         </div>
     </div>
