--- a/eq4m-armas.html
+++ b/eq4m-armas.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Left 4 Dead 2 Weapon Stats</title>
+    <title>EQ4M Armas</title>
     <style type="text/css">
         @import url('https://fonts.googleapis.com/css2?family=Creepster&family=Special+Elite&display=swap');
 
